tests/negative/neg_pr118k_match_non_result.safe
package neg_pr118k_match_non_result

   function value returns integer

      match 41
         when ok (v)
            return v
         when fail (e)
            if e.ok
               return 1
            return 0
